--- a/index.html
+++ b/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-      <meta charset="utf-8">
-      <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-      <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-      <script src="js/jquery-3.1.1.js"></script>
-      <script src="js/scripts.js"></script>
-      <title></title>
+    <meta charset="utf-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">  
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="js/scripts.js"></script>
+    <title></title>
   </head>
 
   <body>
     <div class="container">
       <div class="row">
         <div class="col-md-12" id="header">
-          <h1><img src="img/dice.png" alt="A picture of dice">Pig Dice!<img src="img/dice.png" alt="A picture of dice"></h1>
-          <p id="oneDie">Each turn, a player repeatedly rolls a die until either a 1 is rolled or the player decides to "bank". If the player rolls a 1, they score nothing and it becomes the next player's turn. If the player rolls any other number, it is added to their turn total and the player's turn continues. If a player chooses to "bank", their turn total is added to their score, and it becomes the next player's turn. <br><br>The first player to score 100 or more points wins.</p>
-          <p id="twoDice">This variation is the same as Pig except two standard dice are rolled. If neither shows a 1, their sum is added to the turn total. If a single 1 is rolled, the player scores nothing and the turn ends. If two 1s are rolled, the player’s entire score is lost, and the turn ends.<br><br>The first player to score 100 or more points wins.</p>
+          <h1>
+            <img src="img/dice.png" alt="A picture of dice" />Pig Dice!<img
+              src="img/dice.png"
+              alt="A picture of dice"
+            />
+          </h1>
+          <p id="oneDie">
+            Each turn, a player repeatedly rolls a die until either a 1 is
+            rolled or the player decides to "bank". If the player rolls a 1,
+            they score nothing and it becomes the next player's turn. If the
+            player rolls any other number, it is added to their turn total and
+            the player's turn continues. If a player chooses to "bank", their
+            turn total is added to their score, and it becomes the next player's
+            turn. <br /><br />The first player to score 10 or more points wins.
+          </p>
+          <p id="twoDice">
+            This variation is the same as Pig except two standard dice are
+            rolled. If neither shows a 1, their sum is added to the turn total.
+            If a single 1 is rolled, the player scores nothing and the turn
+            ends. If two 1s are rolled, the player’s entire score is lost, and
+            the turn ends.<br /><br />The first player to score 10 or more
+            points wins.
+          </p>
           <div id="gameStart">
             <select id="gameType" class="form-control">
               <option value="1">One die game</option>
               <option value="2">Two dice game</option>
             </select>
             <select id="playerCount" class="form-control">
-              <option value="1">One player game (Human vs Computer - Easy Mode)</option>
-              <option value="3">One player game (Human vs Computer - Hard Mode)</option>
-              <option value="2">Two player game (Human vs Human)</option>      
+              <option value="1">
+                One player game (Human vs Computer - Easy Mode)
+              </option>
+              <option value="3">
+                One player game (Human vs Computer - Hard Mode)
+              </option>
+              <option value="2">Two player game (Human vs Human)</option>
             </select>
 
             <button id="startGame" class="btn btn-lg">Begin a new game!</button>
@@ -36,10 +58,14 @@
         <div class="col-md-4" id="player1Working">
           <div class="form-group nameEntry1">
             <label for="p1Name">Enter name for Player 1:</label>
-            <input id="p1Name" type="text" class="form-control">
+            <input id="p1Name" type="text" class="form-control" />
             <button id="p1NameSubmit" class="btn btn-lg">Submit</button>
           </div>
-          <h4><span id="p1NameOutput">Player 1</span>'s Bank total:<span id="p1BankTotal"></span></h4>
+          <h4>
+            <span id="p1NameOutput">Player 1</span>'s Bank total:<span
+              id="p1BankTotal"
+            ></span>
+          </h4>
         </div>
         <div class="col-md-4" id="gameScore">
           <!--<h4>Dice roll:<span id="rollOutput"></span></h4>-->
@@ -54,10 +80,14 @@
         <div class="col-md-4" id="player2Working">
           <div class="form-group nameEntry2">
             <label for="p2Name">Enter name for Player 2:</label>
-            <input id="p2Name" type="text" class="form-control">
+            <input id="p2Name" type="text" class="form-control" />
             <button id="p2NameSubmit" class="btn btn-lg">Submit</button>
           </div>
-          <h4><span id="p2NameOutput">Player 2</span>'s Bank total:<span id="p2BankTotal"></span></h4>
+          <h4>
+            <span id="p2NameOutput">Player 2</span>'s Bank total:<span
+              id="p2BankTotal"
+            ></span>
+          </h4>
         </div>
       </div>
     </div>
