--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">  
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all" />
     <script src="js/scripts.js"></script>
     <title></title>
@@ -28,7 +33,7 @@
             turn. <br /><br />The first player to score 10 or more points wins.
           </p>
           <p id="twoDice">
-            This variation is the same as Pig except two standard dice are
+            This letiation is the same as Pig except two standard dice are
             rolled. If neither shows a 1, their sum is added to the turn total.
             If a single 1 is rolled, the player scores nothing and the turn
             ends. If two 1s are rolled, the player’s entire score is lost, and
